--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_blue_plus: ^1.4.0
   # flutter_blue_plugin: ^0.9.2
   flutter_picker: ^2.1.0
+
+  # bluetooth_low_energy: ^1.1.0
   
   flutter_localizations:
     sdk: flutter
