--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <!-- <uses-feature android:name="android.hardware.bluetooth" android:required="true"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/> -->
+    <!-- <uses-feature android:name="android.hardware.bluetooth" android:required="true"/> -->
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
    <application
         android:label="bluetooth_test"
         android:name="${applicationName}"
